path upload of XO Neon Game

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,10 +190,10 @@ button:hover, select:hover {
 
   // ✅ Global database reference
   const db = firebase.database();
-  
+
 </script>
 
-<script src="/static/script.js"></script>
+<script src="./static/script.js"></script>
 
 </body>
 </html>
